# bitchat-tui

./: .SRCINFO  .gitignore  Cargo.toml  Cross.toml  LICENSE  PKGBUILD  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
src/: \  binary_encoding.rs  binary_protocol_utils.rs  command_handling.rs  compression.rs  data_structures.rs  encryption.rs  fragmentation.rs  main.rs  message_handlers.rs  noise_protocol.rs  noise_session.rs  notification_handlers.rs  packet_creation.rs  packet_delivery.rs  packet_parser.rs  payload_handling.rs  persistence.rs  terminal_ux.rs
src/tui/: app.rs  event.rs  mod.rs  tui.rs  ui.rs
src/tui/widgets/: help_bar.rs  input_box.rs  main_panel.rs  mod.rs  popup.rs  sidebar.rs
